welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:8: error: not found: value max
    if (nums(i)>max){
                ^max2Value:9: error: not found: value mUn
      mDeux = mUn
              ^max2Value:10: error: not found: value mUn
      mUn = nums(i)
      ^