welcome.lessons.welcome.array.search.SecondMaxValue.scala.code
def max2Value(nums:Array[Int]): Int = {
  var longueurT = nums.length
  var mUN = nums(0)
  var mDeux = nums (0)
  
  //On parcoure tout le tableau
  for (i <- 0 to longueurT-1){
    if (nums(i)>max){
      mDeux = mUn
      mUn = nums(i)
    }
  }
  return mDeux
}